network_policy/allow-from-namespace.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-8080-emailsvc 
spec:
  podSelector:
    matchLabels:
      app: emailsvc
  ingress:
  - from: 
    - namespaceSelector:
        matchLabels:
          project: myproject
    ports:
    - protocol: TCP
      port: 8080
