network_policy/allow-frontend-pa.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-8080-pricelist-allow
spec:
  podSelector:
    matchLabels:
      app: pricelist-allow
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
