network_policy/allow-pa-database.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-3306
spec:
 podSelector:
   matchLabels:
     tier: database
 ingress:
 - from: 
   - podSelector:
       matchLabels:
         tier: frontend
   ports:
   - protocol: TCP
     port: 3306
